--- a/utilities/build.gradle
+++ b/utilities/build.gradle
@@ -4,6 +4,10 @@ ext {
 }
 
 dependencies {
+    compile("org.slf4j:slf4j-api:${slf4jVersion}")
+
+    testCompile("junit:junit:${junitVersion}")
+    testCompile("org.mockito:mockito-core:${mockitoVersion}")
 }
 
 
